Fixed main navigation contrast issue.

--- a/src/sass/imports/_header.scss
+++ b/src/sass/imports/_header.scss
@@ -44,7 +44,7 @@
     }
 
     .avatar {
-        border: 2px solid _palette(accent);
+        border: 2px solid _palette(accent-blue);
         box-shadow: 0 0 1px 7px rgba(_palette(accent), 0.2);
         border-radius: 100%;
         display: block;
@@ -172,7 +172,7 @@ ul.social-links {
 .site-header.dark {
     background: _palette(secondary);
     border: 0;
-    color: _palette(meta);
+    color: #fff;
 
     .site-navigation {
         background: _palette(secondary);
